# bs-calendar

./: .gitignore  README.md  api.py  sync.py
backend/: api.py  calendars.csv  config.py  middleware.py  pyproject.toml  sqlc.yaml  sync.py
backend/db/: connection.py  models.py  queries.py  queries.sql  schema.sql  seed.sql
frontend/: orval.config.ts  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: MainComponent.tsx  Navbar.tsx
frontend/src/components/pages/: CalendarPage.tsx  CoursesPage.tsx
frontend/src/lib/: axios.ts
frontend/src/lib/api/: endpoints.ts
