[project]
name = "bs-calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "google-auth>=2.43.0",
    "icalendar>=6.3.2",
    "pydantic-settings>=2.12.0",
    "recurring-ical-events>=3.8.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
